# serializer version: 1
# name: test_send_sound_service
  _Call(
    tuple(
      dict({
        'account_name': 'Echo Test',
        'appliance_id': 'G1234567890123456789012345678A',
        'bluetooth_state': True,
        'capabilities': list([
          'AUDIO_PLAYER',
          'MICROPHONE',
        ]),
        'device_cluster_members': list([
          'echo_test_serial_number',
        ]),
        'device_family': 'mine',
        'device_owner_customer_id': 'amazon_ower_id',
        'device_type': 'echo',
        'do_not_disturb': False,
        'entity_id': '11111111-2222-3333-4444-555555555555',
        'online': True,
        'response_style': None,
        'sensors': dict({
          'temperature': dict({
            'name': 'temperature',
            'scale': 'CELSIUS',
            'value': '22.5',
          }),
        }),
        'serial_number': 'echo_test_serial_number',
        'software_version': 'echo_test_software_version',
      }),
      'bell_02',
    ),
    dict({
    }),
  )
# ---
# name: test_send_text_service
  _Call(
    tuple(
      dict({
        'account_name': 'Echo Test',
        'appliance_id': 'G1234567890123456789012345678A',
        'bluetooth_state': True,
        'capabilities': list([
          'AUDIO_PLAYER',
          'MICROPHONE',
        ]),
        'device_cluster_members': list([
          'echo_test_serial_number',
        ]),
        'device_family': 'mine',
        'device_owner_customer_id': 'amazon_ower_id',
        'device_type': 'echo',
        'do_not_disturb': False,
        'entity_id': '11111111-2222-3333-4444-555555555555',
        'online': True,
        'response_style': None,
        'sensors': dict({
          'temperature': dict({
            'name': 'temperature',
            'scale': 'CELSIUS',
            'value': '22.5',
          }),
        }),
        'serial_number': 'echo_test_serial_number',
        'software_version': 'echo_test_software_version',
      }),
      'Play B.B.C. radio on TuneIn',
    ),
    dict({
    }),
  )
# ---
